Updates to java 21